tests/platform_import_alias_bad.stderr
tests/platform_import_alias_bad.sl:0:19: error: import "platform" cannot be aliased; use import "platform"
