tests/platform_import_alias_bad.sl
import p "platform"

fn main() i32 {
    return 0
}
